--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,55 @@
 version: '3'
 
 services:
-  owncloud:
+  minio1:
     image: minio/minio
     restart: always
-    command: server /data
     ports:
-      - ${HTTP_PORT}:9000
-    
+      - 9001:9000
+    volumes:
+      - data1:/data
+    environment:
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+    command: server http://minio1/data http://minio2/data http://minio3/data http://minio4/data
+  minio2:
+    image: minio/minio
+    restart: always
+    ports:
+      - 9002:9000
+    volumes:
+      - data2:/data
+    environment:
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+    command: server http://minio1/data http://minio2/data http://minio3/data http://minio4/data
+  minio3:
+    image: minio/minio
+    restart: always
+    ports:
+      - 9003:9000
+    volumes:
+      - data3:/data
+    environment:
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+    command: server http://minio1/data http://minio2/data http://minio3/data http://minio4/data
+  minio4:
+    image: minio/minio
+    restart: always
+    ports:
+      - 9004:9000
+    volumes:
+      - data4:/data
+    environment:
+      MINIO_ACCESS_KEY: minio
+      MINIO_SECRET_KEY: minio123
+    command: server http://minio1/data http://minio2/data http://minio3/data http://minio4/data
+## By default this config uses default local driver,
+## For custom volumes replace with volume driver configuration.
+volumes:
+  data1:
+  data2:
+  data3:
+  data4:
+
